@@ -1,10 +1,10 @@
-#!/usr/bin/perl -w
+#!/usr/bin/perl
 # Call a PostgreSQL client program with the version, cluster and default
 # database specified in ~/.postgresqlrc or
 # /etc/postgresql-common/user_clusters.
 #
 # (C) 2005-2009 Martin Pitt <mpitt@debian.org>
-# (C) 2013-2014 Christoph Berg <myon@debian.org>
+# (C) 2013-2017 Christoph Berg <myon@debian.org>
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -16,23 +16,24 @@
 #  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 #  GNU General Public License for more details.
 
+use warnings;
 use strict;
 use POSIX;
 use PgCommon;
 
-my ($version, $cluster, $db, $port, $host);
+my ($version, $cluster);
+my $explicit_host = exists $ENV{PGHOST};
+my $explicit_port = exists $ENV{PGPORT};
+my $explicit_service = exists $ENV{PGSERVICE};
 
-$host = $ENV{'PGHOST'};
-
-# Check for PGCLUSTER in %ENV
-if (defined $ENV{'PGCLUSTER'}) {
+# Evaluate PGCLUSTER (unless PGHOST is set as well)
+if (exists $ENV{'PGCLUSTER'} and not $explicit_host) {
     ($version, $cluster) = split ('/', $ENV{'PGCLUSTER'}, 2);
-    error 'Invalid version specified with $PGCLUSTER' unless version_exists $version;
+    error "Invalid version $version specified in PGCLUSTER" unless version_exists $version;
     error 'No cluster specified with $PGCLUSTER' unless $cluster;
 }
 
-# Check for --cluster argument and filter it out, and check if --port is specified
-my $port_specified = exists $ENV{'PGPORT'};
+# Check for --cluster argument and filter it out
 for (my $i = 0; $i <= $#ARGV; ++$i) {
     last if $ARGV[$i] eq '--';
 
@@ -40,78 +41,87 @@ for (my $i = 0; $i <= $#ARGV; ++$i) {
         error '--cluster option needs an argument (<version>/<cluster>)' if ($i >= $#ARGV);
 
         ($version, $cluster) = split ('/', $ARGV[$i+1], 2);
-	$host = undef; # --cluster overrides $PGHOST env var
-        error 'Invalid version specified with --cluster' unless version_exists $version;
+        error "Invalid version $version specified with --cluster" unless version_exists $version;
         error 'No cluster specified with --cluster' unless $cluster;
 
         splice @ARGV, $i, 2;
         last;
     } elsif ($ARGV[$i] =~ /^--cluster=(\d+\.?\d)\/(.+)/) {
         ($version, $cluster) = ($1, $2);
-        $host = undef; # --cluster overrides $PGHOST env var
-        error 'Invalid version specified with --cluster' unless version_exists $version;
+        error "Invalid version $version specified with --cluster" unless version_exists $version;
         error 'No cluster specified with --cluster' unless $cluster;
 
         splice @ARGV, $i, 1;
         last;
     }
-
-    $port_specified = 1 if $ARGV[$i] =~ /^--port\b/ || $ARGV[$i] =~ /^-\w*p\w*\d*$/;
-    $host = '.from.commandline' if $ARGV[$i] =~ /^--host\b/ || $ARGV[$i] =~ /^-\w*h\w*$/;
+    # --host or -h on command line, drop info from PGCLUSTER
+    if ($ARGV[$i] =~ /^--host\b/ || $ARGV[$i] =~ /^-\w*h\w*$/) {
+        ($version, $cluster) = (undef, undef);
+        $explicit_host = 1;
+        delete $ENV{PGCLUSTER};
+    }
+    # --port or -p on command line
+    if ($ARGV[$i] =~ /^--port\b/ || $ARGV[$i] =~ /^-\w*p\w*$/) {
+        $explicit_port = 1;
+    }
+    # "service=" in connection string
+    if ($ARGV[$i] =~ /\bservice=/) {
+        $explicit_service = 1;
+    }
 }
 
-# Determine $version, $cluster, $db, $port from map files
-($version, $cluster, $db) = user_cluster_map() unless $cluster;
+my ($db);
 
-# check if we have a network cluster
-if (!$host && $cluster && !cluster_exists $version, $cluster) {
+# if we don't have a cluster, and no specific host was given, consult postgresqlrc
+# or fall back to default port cluster (on 5432), or undef otherwise
+($version, $cluster, $db) = user_cluster_map() unless ($cluster or $explicit_host);
+
+my ($host, $port);
+
+if ($cluster) {
+    # check if we have a network cluster (N.N/the.host.name:port)
     if ($cluster =~ /^(\S+):(\d*)$/) {
 	$host = $1;
 	$port = $2 || 5432;
+    } elsif (not cluster_exists($version, $cluster)) {
+        # a specific cluster was requested, error out because it doesn't exist
+        error "Cluster $version $cluster does not exist";
     } else {
-	error 'Specified cluster does not exist locally and does not specify a remote cluster';
+        $host = get_cluster_socketdir ($version, $cluster);
+        $port = get_cluster_port($version, $cluster);
     }
+    # set PGCLUSTER variable for information
+    $ENV{PGCLUSTER} = "$version/$cluster";
 }
 
-if (!$host && $cluster) {
-    $port = get_cluster_port($version, $cluster);
-
-    unless ($ENV{'PGHOST'}) {
-        # default to cluster specific Unix socket directory
-        $ENV{'PGHOST'} = get_cluster_socketdir $version, $cluster;
-    }
-}
-
-$ENV{'PGSYSCONFDIR'} = '/etc/postgresql-common' if !$ENV{'PGSYSCONFDIR'};
+# setup environment
+$ENV{'PGSYSCONFDIR'} //= '/etc/postgresql-common';
+$ENV{'PGHOST'} = $host if ($host);
 $ENV{'PGPORT'} = $port if $port && !$ENV{'PGPORT'};
 $ENV{'PGDATABASE'} = $db if $db && !$ENV{'PGDATABASE'};
-$ENV{'PGHOST'} = $host if $host && $host ne '.from.commandline';
 
-# if we only have a port, but no version here, use the latest version
-# TODO: this could be improved by better argument parsing and mapping back the
-# port to a cluster version/name
-if (!$version and $port_specified) {
+# check under which name we were called
+my $cmdname = (split '/', $0)[-1];
+
+unless ($version or $explicit_host or $explicit_port or $explicit_service) {
+    print STDERR "Warning: No existing local cluster is suitable as a default target. Please see man pg_wrapper(1) how to specify one.\n";
+}
+
+# if we have no version yet, use the latest version. We were called as psql,
+# pg_archivecleanup, or pg_isready, always use latest version
+if (not $version or $cmdname =~ /^(psql|pg_archivecleanup|pg_isready)$/) {
     $version = get_newest_version;
 }
-
 unless ($version) {
-    if (get_versions) {
-	error 'No existing local cluster is suitable as a default target. Please see man pg_wrapper(1) how to specify one.';
-    } else {
-	error 'You must install at least one postgresql-client-<version> package.';
-    }
+    error 'You must install at least one postgresql-client-<version> package';
 }
+error "PostgreSQL version $version is not installed" unless -d "$PgCommon::binroot$version";
 
-error 'Invalid PostgreSQL cluster version' unless -d "$PgCommon::binroot$version";
-my $cmdname = (split '/', $0)[-1];
 my $cmd;
-
-# for psql we always want the latest version, as this is backwards compatible
-# to every major version that that we support
 if ($cmdname eq 'pg_wrapper') {
-    error "pg_wrapper should not be called directly, but through a symlink";
-} elsif ($cmdname =~ /^(psql|pg_archivecleanup|pg_isready)$/) {
-    $cmd = get_program_path ($cmdname, get_newest_version);
+    error "pg_wrapper called directly but no program given as argument"
+        if (@ARGV == 0);
+    $cmd = shift; # will be unshifted back below
 } else {
     $cmd = get_program_path ($cmdname, $version);
 }
@@ -215,7 +225,9 @@ will be selected.
 
 =back
 
-If none of these rules match, B<pg_wrapper> aborts with an error.
+If none of these rules match, B<pg_wrapper> does not set any environment
+variables and the program called will likely error out with a message like
+"could not connect to server: Connection refused".
 
 For B<psql>, B<pg_archivecleanup>, and B<pg_isready>, B<pg_wrapper> will always use the binary from
 the newest PostgreSQL version installed, as these are downwards compatible.
@@ -225,6 +237,8 @@ the newest PostgreSQL version installed, as these are downwards compatible.
 =over
 
 =item B<--cluster> I<version>B</>I<cluster>
+
+=item B<--cluster> I<version>B</>I<host>B<:>[I<port>]
 
 I<cluster> is either the name of a local cluster, or takes the form
 I<host>:I<port> for a remote cluster. If I<port> is left empty (i. e. you just
